--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -16,7 +16,6 @@ main .hero-container {
   max-width: 1200px;
   margin-top: 0;
   margin-bottom: 0;
-  font-family: serif;
   font-weight: 100;
 }
 
