--- a/blocks/media/media.css
+++ b/blocks/media/media.css
@@ -11,7 +11,6 @@ section .article {
 }
 
 :scope h2, h4 {
-    font-family: serif;
     font-weight: 100;
 }
 
