--- a/blocks/newsletter/newsletter.css
+++ b/blocks/newsletter/newsletter.css
@@ -5,7 +5,6 @@
 }
 
 .newsletter h3 {
-    font-family: serif;
     font-weight: 100;
 }
 
